--- a/css/pages/cases/timify.scss
+++ b/css/pages/cases/timify.scss
@@ -129,8 +129,8 @@ body.timify-case {
     transform: skew(0, -1deg);
     position: absolute;
     top: 0;
-    right: -10rem;
-    left: -10rem;
+    right: 0;
+    left: 0;
     bottom: 0;
   }
 
