--- a/css/pages/cases/trainline.scss
+++ b/css/pages/cases/trainline.scss
@@ -106,8 +106,8 @@ body.trainline-case {
     transform: skew(0, -1deg);
     position: absolute;
     top: 0;
-    right: -10rem;
-    left: -10rem;
+    right: 0;
+    left: 0;
     bottom: 0;
   }
 
